[tool.poetry]
name = "pytest-splunk-env"
version = "0.0.0"
description = "pytest fixtures for interaction with Splunk Enterprise and Splunk Cloud"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.1"
filelock = "^3.0"
splunk-sdk = "*"
future = "*"
httplib2 = "*"
pytest-xdist = "*"
lovely-pytest-docker = { version="^0", optional = true }

[tool.poetry.extras]
docker = ['lovely-pytest-docker']

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pre-commit = "^2.7.1"
flake8 = "^3.8.4"
isort = "*"
lovely-pytest-docker = "*"

[tool.poetry.plugins]
pytest11 = { "pytest_splunk_env_base" = "pytest_splunk_env.splunk.base", "pytest_splunk_env_splunk" = "pytest_splunk_env.splunk", "pytest_splunk_env_splunk_docker" = "pytest_splunk_env.splunk.docker", "pytest_splunk_env_splunk_external" = "pytest_splunk_env.splunk.external", "pytest_splunk_env_splunk_local" = "pytest_splunk_env.splunk.local" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
